[package]
name = "exactly-substreams"
version = "0.1.0"
edition = "2024"
repository = "https://github.com/exactly/exa"

[lib]
name = "substreams"
crate-type = ["cdylib"] # cspell:ignore cdylib

[dependencies]
ethabi = "18" # cspell:ignore ethabi
hex-literal = "1"
num-bigint = "0.4"
prost = "0.13"
prost-types = "0.13"
serde = "1"
serde_qs = "0.15"
substreams = "0.7"
substreams-database-change = "3"
substreams-ethereum = "0.11"

[build-dependencies]
anyhow = "1"
glob = "0.3"
indoc = "2"
regex = "1"
serde = "1"
serde_json = "1"
substreams-ethereum = "0.11"

[profile.release]
lto = true
opt-level = 's'
strip = "debuginfo" # cspell:ignore debuginfo
